--- a/创造对象的4种基本方法.md
+++ b/创造对象的4种基本方法.md
@@ -1,8 +1,24 @@
+<!-- TOC -->
+
+- [1. 字面量创建](#1-字面量创建)
+  - [基本写法](#基本写法)
+- [2. 使用内置构造函数创建对象](#2-使用内置构造函数创建对象)
+  - [JS 中的内置构造函数](#js-中的内置构造函数)
+  - [基本写法](#基本写法-1)
+- [3. 工厂模式](#3-工厂模式)
+  - [基本写法](#基本写法-2)
+- [4. 自定义构造函数模式](#4-自定义构造函数模式)
+  - [用构造函数模式将前面的例子重写：](#用构造函数模式将前面的例子重写)
+  - [自定义构造函数通用写法：](#自定义构造函数通用写法)
+
+<!-- /TOC -->
+
 ### 1. 字面量创建
 
 字面量创建是由若干名/值对组成的映射表，名/值对中间用冒号分隔，名/值对之间用逗号分隔，整个映射表用花括号括起来。
 
 #### 基本写法
+
 ```
 var student1 = {
     name : 'cocytus',
@@ -20,15 +36,16 @@ console.log(student1.name);
 console.log(student1.age);
 console.log(student1.male);
 ```
+
 优点：简单，直观，易懂。
 
-缺点：①代码复用性差；②代码冗余度高
+缺点：① 代码复用性差；② 代码冗余度高
 
 ### 2. 使用内置构造函数创建对象
 
-#### JS中的内置构造函数
+#### JS 中的内置构造函数
 
-```
+```JavaScript
 String
 Number
 Boolean
@@ -52,7 +69,7 @@ RegExp
   console.log(obj1);
 ```
 
-弊端：①创建的对象无法复用；②代码冗余度高
+弊端：① 创建的对象无法复用；② 代码冗余度高
 
 ### 3. 工厂模式
 
@@ -83,6 +100,7 @@ RegExp
   var person3 = createPerson(19,"male","ww");
   console.log(person3);
 ```
+
 优点：可以批量创建同一种类型的对象
 
 缺点：没有解决对象识别的问题（看不到对象类型）
@@ -94,6 +112,7 @@ RegExp
 所谓“构造函数”，其实就是一个普通函数，但是内部使用了 this 变量，对构造函数使用 new 运算符，就能生成实例，并且 this 变量会绑定在实例对象上。
 
 #### 用构造函数模式将前面的例子重写：
+
 ```JavaScript
     function Person(age,gender,name){//构造函数首字母一定大写
         this.age = age;
@@ -103,14 +122,13 @@ RegExp
             alert(this.name);
         };
     }
-    
+
     var person1 = new Person(18,"male","zs");
     console.log(person1);
     var person2 = new Person(20,"male","ls");
     console.log(person2);
     var person3 = new Person(19,"male","ww");
     console.log(person3);
-
 ```
 
 #### 自定义构造函数通用写法：
@@ -131,9 +149,9 @@ function 构造函数名(参数1,参数2,参数3...) {
     // 自定义构造函数方式创建对象
     var 对象01 = new 构造函数名(实参01,实参02,实参03...);
     var 对象02 = new 构造函数名(实参01,实参02,实参03...);
-
 ```
-必须使用 new 操作符，这种方式调用构造函数实际上经历了以下4个步骤：
+
+必须使用 new 操作符，这种方式调用构造函数实际上经历了以下 4 个步骤：
 
 1. 创建了一个新的空对象
 2. 将构造函数里面的 this 指向了这新对象
