--- a/预解析.md
+++ b/预解析.md
@@ -1,3 +1,12 @@
+<!-- TOC -->
+
+- [JavaScript预解析](#javascript预解析)
+    - [一、原理](#一原理)
+    - [二、解析原则](#二解析原则)
+    - [三、实例分析](#三实例分析)
+      - [案例分析](#案例分析)
+
+<!-- /TOC -->
 # JavaScript预解析
 
 ### 一、原理
