--- a/预解析.md
+++ b/预解析.md
@@ -1,27 +1,28 @@
 <!-- TOC -->
 
-- [JavaScript预解析](#javascript预解析)
-    - [一、原理](#一原理)
-    - [二、解析原则](#二解析原则)
-    - [三、实例分析](#三实例分析)
-      - [案例分析](#案例分析)
+- [JavaScript 预解析](#javascript-预解析)
+  - [一、原理](#一原理)
+  - [二、解析原则](#二解析原则)
+  - [三、实例分析](#三实例分析)
+    - [案例分析](#案例分析)
 
 <!-- /TOC -->
-# JavaScript预解析
+
+# JavaScript 预解析
 
 ### 一、原理
 
 1. 定义：JavaScript“预解析”，可以理解为把变量或函数预先解析到它们被使用的环境中。
 
-2. 通俗点讲，即浏览器在正式运行JavaScript代码前，预先根据关键字var、function等，来查找一些需要被解析的东西，给这些需要被解析的东西提前赋值，其中包括：
+2. 通俗点讲，即浏览器在正式运行 JavaScript 代码前，预先根据关键字 var、function 等，来查找一些需要被解析的东西，给这些需要被解析的东西提前赋值，其中包括：
 
 （1）凡是传参，直接赋值参数；
 
-（2）凡是var的，都会赋予一个undefined作为初始值；
+（2）凡是 var 的，都会赋予一个 undefined 作为初始值；
 
 （3）凡是函数，直接赋予函数本身作为初始值；所以这就是为什么我们可以把函数调用放到函数声明之前的原因）。
 
-“预解析”结束后，浏览器再逐行解读代码，并通过表达式：= + - * -- ++ !等来修改这些“预解析”的值。
+“预解析”结束后，浏览器再逐行解读代码，并通过表达式：= + - \* -- ++ !等来修改这些“预解析”的值。
 
 ### 二、解析原则
 
@@ -42,13 +43,13 @@
 同名情况下，函数声明的权重比变量高，只保留函数。
 
 ```JavaScript
-console.log(a);    //function a(){ alert('我是函数') },  
+console.log(a);    //function a(){ alert('我是函数') },
  var a = '我是变量';
 function a(){ console.log('我是函数') }
 console.log(a);    //'我是变量', = 可以改变初始值
-
 ```
-js会先从函数内部找变量（var），若没有再从外部找，如果全局也没有就会报错
+
+js 会先从函数内部找变量（var），若没有再从外部找，如果全局也没有就会报错
 
 ```JavaScript
 console.log(a);    //undefined
@@ -61,7 +62,6 @@ function fn(){
 }
 fn()
 console.log(a);    //0,fn里面的a与全局的a不是同一作用域的
-
 ```
 
 ```JavaScript
@@ -69,15 +69,17 @@ console.log(a);    //undefined
 var a = 0;
 console.log(a);    //0
 function fn(){
-    console.log(a);    //0 
+    console.log(a);    //0
     a = 2;
    console.log(a);  //2
- 
+
 }
 fn()
 console.log(a);    //2,fn把这全局的a修改了
 ```
-JS会把传参当作var一样对待,相当于在fn内部定义了一个变量--> var a;
+
+JS 会把传参当作 var 一样对待,相当于在 fn 内部定义了一个变量--> var a;
+
 ```JavaScript
 function fn(a){
    console.log(a);    //undefined
@@ -86,7 +88,6 @@ function fn(a){
 }
 fn()
 console.log(a);    //报错
-
 ```
 
 #### 案例分析
@@ -107,12 +108,13 @@ console.log(a);    //报错
     alert(a);     // 3
     a();            //报错
 ```
+
 1. 找出需要被解析的参数：a
 
-2. 预解析赋值（分别对应第2,4,6,8行）：undefined，function a(alert(2);)，undefined，function a(alert(4);)
+2. 预解析赋值（分别对应第 2,4,6,8 行）：undefined，function a(alert(2);)，undefined，function a(alert(4);)
 
-根据解析原则1，变量与函数重名保留函数，则第一个alert预解析为：function a(alert(4);)
+根据解析原则 1，变量与函数重名保留函数，则第一个 alert 预解析为：function a(alert(4);)
 
-3. 预解析结束，代码开始执行，第一个alert并未通过表达式赋值，则输出预解析的值，其余均有表达式操作，依次改变为：1，3
+3. 预解析结束，代码开始执行，第一个 alert 并未通过表达式赋值，则输出预解析的值，其余均有表达式操作，依次改变为：1，3
 
-4. 最后的a为一个变量，不能以函数的方式执行，所以报错了
+4. 最后的 a 为一个变量，不能以函数的方式执行，所以报错了
