面向对象编程

--- a/面向对象编程.md
+++ b/面向对象编程.md
@@ -1,3 +1,22 @@
+<!-- TOC -->
+
+- [1. 面向对象编程](#1-面向对象编程)
+  - [1.1. 对象](#11-对象)
+  - [1.2. 面向对象](#12-面向对象)
+    - [1.2.1. 面向对象三大特性：](#121-面向对象三大特性)
+      - [1.2.1.1. 封装性](#1211-封装性)
+      - [1.2.1.2. 继承性](#1212-继承性)
+      - [1.2.1.3. 多态性](#1213-多态性)
+  - [1.3. 创建对象的方法](#13-创建对象的方法)
+    - [1.3.1. 字面量创建](#131-字面量创建)
+    - [1.3.2. 内置构造函数](#132-内置构造函数)
+    - [1.3.3. 工厂模式](#133-工厂模式)
+    - [1.3.4. 自定义构造函数模式](#134-自定义构造函数模式)
+    - [1.3.5. 构造函数的存在的问题](#135-构造函数的存在的问题)
+    - [1.3.6. 原型模式](#136-原型模式)
+
+<!-- /TOC -->
+
 # 1. 面向对象编程
 
 ## 1.1. 对象
@@ -180,7 +199,7 @@ console.log(person1 == person2); // false
 console.log(person1.sayHi == person2.sayHi); //  false
 ```
 
-　　因为每个对象上都有属于自己的 sayHi 方法，然而两个 sayHi 方法并不是同一个 Function 实例。不同实例上的同名函数是不相等的。
+因为每个对象上都有属于自己的 sayHi 方法，然而两个 sayHi 方法并不是同一个 Function 实例。不同实例上的同名函数是不相等的。
 假如创建了 100 个对象，那么在内存里面就会创建 100 个 sayHi 函数，这样会造成内存浪费的问题。其实在内存里面只需要一份 sayHi 方法就行了。
 　　所以我们把函数定义转移到构造函数之外来解决这个问题。
 
@@ -201,9 +220,9 @@ var person2 = new Person("ls", 16);
 console.log(person1.sayHi == person2.sayHi); // true
 ```
 
-　　我们把 sayHi()函数的定义转移到了构造函数外部，而在构造函数内部，我们将 sayHi 属性设置成等于全局的 sayHi 函数。这样由于 sayHi 包含的是一个指向函数的指针，因此 person1 和 person2 对象就共享在全局作用域中定义的同一个 sayHi()函数。
+我们把 sayHi()函数的定义转移到了构造函数外部，而在构造函数内部，我们将 sayHi 属性设置成等于全局的 sayHi 函数。这样由于 sayHi 包含的是一个指向函数的指针，因此 person1 和 person2 对象就共享在全局作用域中定义的同一个 sayHi()函数。
 
-　　但是这样全局作用域中定义的函数实际上只能被某个对象调用，而且如果对象需要定义很多方法，那么就要定义很多个全局函数。就会暴漏很多的函数，容易造成全局变量污染。
+但是这样全局作用域中定义的函数实际上只能被某个对象调用，而且如果对象需要定义很多方法，那么就要定义很多个全局函数。就会暴漏很多的函数，容易造成全局变量污染。
 
 ### 1.3.6. 原型模式
 
