--- a/函数.md
+++ b/函数.md
@@ -1,3 +1,25 @@
+<!-- TOC -->
+
+- [1. 函数](#1-函数)
+  - [1.1. 函数定义](#11-函数定义)
+  - [1.2. 函数声明](#12-函数声明)
+  - [1.3. `arguments` 对象](#13-arguments-对象)
+  - [1.4. 函数传参](#14-函数传参)
+    - [1.4.1. 基本类型值传递](#141-基本类型值传递)
+    - [1.4.2. 引用类型值传递](#142-引用类型值传递)
+  - [1.5. 函数的返回值](#15-函数的返回值)
+  - [1.6. 函数的四种调用模式](#16-函数的四种调用模式)
+    - [1.6.1. 函数调用模式](#161-函数调用模式)
+    - [1.6.2. 方法调用模式](#162-方法调用模式)
+    - [1.6.3. 构造函数调用模式](#163-构造函数调用模式)
+    - [1.6.4. 上下文调用模式](#164-上下文调用模式)
+      - [1.6.4.1. `call()`](#1641-call)
+      - [1.6.4.2. `apply()`](#1642-apply)
+      - [1.6.4.3. `bind()`](#1643-bind)
+    - [1.6.5. `call()`和 `apply()`的区别](#165-call和-apply的区别)
+
+<!-- /TOC -->
+
 # 1. 函数
 
 ## 1.1. 函数定义
@@ -6,32 +28,81 @@
 
 函数就是一个功能，并且具备复用性。
 
-声明函数和使用函数
+## 1.2. 函数声明
+
+1. 声明函数式函数
+
+   ```JavaScript
+   function func1() {
+      alert("hello,world");
+   }
+
+   func1();
+   ```
+
+2. 函数直接量（函数表达式），不能先调用再申明，因为预解析将变量声明提升了
+
+   ```JavaScript
+   var func2 = function () {
+      alert("hello,world");
+
+   func2();
+   ```
+
+3. 函数构造函数（匿名函数）
+   **语法**：var fn = new Function(arg1, arg2, ...., bodyFn);
+
+   **参数说明**： 参数可以是若干个，除了最后一个，其余都是创建出来的函数的形参，最后一个参数是创建出来的函数的函数体
+
+   **注意**： 所有的参数类型都是字符串
+
+   ```JavaScript
+    var func1 = new Function("n1", "n2", "console.log(n1+n2);");
+    console.log(func1);
+
+    //这个函数相当于是：
+    var func1 = function(n1, n2){
+        console.log(n1+n2);
+        }
+
+    //如果参数只有一个的时候，这个参数作为创建出来的函数的函数体
+    var func2 = new Function("alert(111)");
+    console.log(func2);
+    func2();
+   ```
+
+## 1.3. `arguments` 对象
+
+当函数被调用时，会得到一个免费奉送的参数数组，那就是 `arguments` 数组。通过它，函数可以访问所有它被调用时传递给他的参数列表。这使得编写一个无需指定参数个数的函数成为可能。
 
 ```JavaScript
-// 声明函数式函数
-    function func() {
-        alert("hello,world");
-    }
-
-//函数构造函数（匿名函数）
-    var func = new Function(alert("hello,world"));
-
-//函数直接量（函数表达式）
-    var func = function () {
-        alert("hello,world");
-
-// 调用函数
-functionName();
+    var sum = function(){
+        var i ,sum =0;
+        for(i = 0;i<arguments.length;i+=1){
+            sum+=arguments[i];
+        }
+        return sum;
+    };
+    document.writeln(sum(4,5,23,13,35,46,-10));//116
 ```
 
-特点说明：
+在 `ECMAScript` 中的参数在内部是用一个数组来表示的，函数接收到的始终都是这个数组，而不关心数组中包含哪些参数
 
-- 函数默认不会执行，必须通过函数名()调用才会执行；
-- 函数的命名尽量遵守，以驼峰式动词或者动词+名词的方式，这样函数的作用一目了然；
-- 函数一次声明可以多次调用，每一次函数调用函数体会重新执行一次。
+```JavaScript
+function add(num1,num2){
+num = num1 + num2;
+return num;
+}
 
-## 1.2. 函数传参
+var result = 12,count = 20;
+alert(add(result,count));//32;命名的参数只提供便利，解析器不会验证命名参数
+```
+
+实际上，`arguments` 并不是一个真正的数组，它只是一个类数组的对象，它拥有一个 `length` 属性，但他缺少所有数组的方法。另外，`arguments` 对象的长度是由传入的参数个数决定的，而不是由定义函数时的命名参数的个数决定的
+
+函数在定义或者声明的时候，所有的参数都是形参，因此，我们可以根据实际情况来命名参数，函数也只有在被调用时才会传入实参。而每个函数在被调用时都会自动取得两个特殊变量：`this` 和 `arguments`
+
+## 1.4. 函数传参
 
 JavaScript 中所有函数的参数都是按值传递的，也就是说把函数外部的值赋给内部的参数，就如同把一个变量赋值给另一个变量一样。
 
@@ -41,7 +112,7 @@ JavaScript 中所有函数的参数都是按值传递的，也就是说把函数
 
 在 JavaScript 中，实参的个数和形参的个数可以不一样，如果实参过多那么多余的实参会被忽略，如果形参过多则会自动填上 undefined。
 
-### 1.2.1. 基本类型值传递
+### 1.4.1. 基本类型值传递
 
 定义一个处理函数，传递给函数一个数值类型的值，只会修改局部变量的值，而不会修改外部变量。
 
@@ -57,7 +128,7 @@ count;//10
 
 在函数 add()内部更改基本类型 count(num=count)的值，没有反映到函数外部的基本类型变量 count。说明基本类型是按值传递参数的。
 
-### 1.2.2. 引用类型值传递
+### 1.4.2. 引用类型值传递
 
 对象传递的是**地址**, 函数内外的变量会根据引用访问同一个对象, 因为堆中对应的地址只有一个。
 
@@ -71,7 +142,7 @@ handleObj(parson);
 console.log('parson:'+JSON.stringify(parson.name)); // jack
 ```
 
-## 1.3. 函数的返回值
+## 1.5. 函数的返回值
 
 当函数程序运行后的结果外部需要使用的时候，我们不能直接给与，需要通过 return 返回。
 函数内部，return 后面的值就是返回值，将函数执行后剩下的结果返回给主调
@@ -83,34 +154,133 @@ JavaScript 中函数返回值的特点如下：
 3. 如果函数使用 return 语句，但是 return 后面没有任何值，那么函数的返回值也是：undefined；
 4. 函数使用 return 语句后，这个函数会在执行完 return 语句之后停止并立即退出，也就是说 return 后面的所有其他代码都不会再执行,所以函数返回至具有切断函数执行的功能。
 
-## 1.4. 函数没有重载
+## 1.6. 函数的四种调用模式
+
+根据函数内部 `this` 的指向不同，可以将函数的调用模式分成 4 种
+
+### 1.6.1. 函数调用模式
+
+此时的 this 指向 `window` ，但是以函数的形式调用时通常不使用 `this` 关键字。返回值由 `return` 语句决定。
 
 ```JavaScript
-    function addSomeNumber(num){
-        return num + 100;
-    }
+// 声明式函数
+function fn1(){
+    console.log(this);
+}
 
-    function addSomeNumber(num){
-        return num + 200;
-    }
+// 函数表达式函数
+ var fn2 = function() {
+    console.log(this);
+ };
 
-    var result = addSomeNumber(100);//300
+fn1();     //window
+fn2();     //window
 ```
 
-显然这个例子中声明了两个同名函数，而结果则是后面的函数覆盖了前面的函数。
-
-以上代码实际上与下面的代码没有什么区别。
+### 1.6.2. 方法调用模式
 
 ```JavaScript
-    var addSomeNumber = function(num){
-        return num + 100;
-    };
-
-    addSomeNumber = function(num){
-        return num + 200;
-    };
-
-    var result = addSomeNumber(100);//300
+var obj = {
+    name: "zhangSan",
+    sayHi: function () {
+        console.log(this);
+    }
+};
+obj.sayHi(); //obj对象
 ```
 
-通过观察重写之后的代码，很容易看清楚到底是什么一回事——在创建第二个函数时，实际上覆盖了引用第一个函数的变量 addSomeNumber。
+### 1.6.3. 构造函数调用模式
+
+构造函数内的 `this` 指向就是这个新创建的实例对象
+
+```JavaScript
+function Person() {
+    console.log(this);
+}
+var p = new Person();
+```
+
+### 1.6.4. 上下文调用模式
+
+任何函数都可以调用这三个方法
+
+#### 1.6.4.1. `call()`
+
+**作用**：
+可以用 `call()` 来调用函数，并修改函数中 `this` 的指向
+
+**语法**：
+`func.call(obj,value1,value2);`
+
+**参数**：
+第一个参数: 改变 `this` 的指向
+后面的参数: 被调用函数要传入的实参，以逗号分隔
+如果 `call()` 没有参数，或者第一个参数为 `null`，函数内的 `this` 指向 `window`
+
+**示例**：
+
+```JavaScript
+function sum(n1, n2){
+    return n1 + n2;
+}
+
+function callSum(n1, n2){
+    return sum.call(this, n1, n2);
+}
+
+alert(callSum(10,10))//20
+```
+
+#### 1.6.4.2. `apply()`
+
+**作用**：
+可以用 `apply()` 来调用函数，并修改函数中 `this` 的指向
+
+**语法**：
+`func.apply(obj,[value1,value2])；`
+
+**参数**：
+第一个参数: 改变 `this` 的指向
+第二个参数: 传入一个数组或伪数组，里面存放被调用函数需要的实参
+
+**示例**：
+
+```JavaScript
+function fn(n1, n2){
+    console.log(n1 + n2);//300
+    console.log(this);//Object
+}
+
+fn.apply({name: "ww"},  [100, 200] );
+```
+
+#### 1.6.4.3. `bind()`
+
+**作用**：
+不会调用函数，克隆一个新的函数，其 `this` 值会被绑定到传给`bind()`函数的值
+
+**语法**：
+`func.bind(obj,value1,value2)();`
+`func.bind(obj)(value1,value2);`
+
+**参数**：
+第一个参数: 改变 `this` 的指向
+后面的参数: 被调用函数要传入的实参，以逗号分隔
+
+**示例**：
+
+```JavaScript
+
+```
+
+### 1.6.5. `call()`和 `apply()`的区别
+
+相同点：
+
+1. 他们都是 `function.prototype` 对象中定义的方法
+2. 第一个参数是都是函数内部的 `this` 的值
+
+不同点：
+
+1. `call()`方法将函数的参数从第二个参数开始依次排开；
+2. `apply()`方法的第二个参数是一个数组对象，数组的第一个参数表示函数的第一个实参，以此类推。
