--- a/预解析.md
+++ b/预解析.md
@@ -14,7 +14,7 @@
 
 1. 定义：JavaScript“预解析”，可以理解为把变量或函数预先解析到它们被使用的环境中。
 
-2. 通俗点讲，即浏览器在正式运行 JavaScript 代码前，预先根据关键字 var、function 等，来查找一些需要被解析的东西，给这些需要被解析的东西提前赋值，其中包括：
+2. 通俗点讲，即浏览器在正式运行 JavaScript 代码前，预先根据关键字 `var`、`function` 等，来查找一些需要被解析的东西，给这些需要被解析的东西提前赋值，其中包括：
 
 （1）凡是传参，直接赋值参数；
 
