--- a/原型和原型链.md
+++ b/原型和原型链.md
@@ -89,7 +89,7 @@ console.log(p1.sayName === p2.sayName) // => true
 
 1. 会先在自身上查找，如果没有
 2. 则根据`__proto__`对应的原型去找，如果没有
-3. 一直找到`Object.prototyp`，如果没有，那就找不到了。
+3. 一直找到`Object.prototype`，如果没有，那就找不到了。
 
 如果是修改操作：
 
