--- a/事件.md
+++ b/事件.md
@@ -14,6 +14,9 @@
       - [1.2.2.2. 删除事件处理程序](#1222-删除事件处理程序)
     - [1.2.3. DOM2 级事件处理程序](#123-dom2-级事件处理程序)
   - [1.3. 事件对象](#13-事件对象)
+    - [1.3.1. DOM 中的事件对象](#131-dom-中的事件对象)
+    - [1.3.2. IE 中的事件对象](#132-ie-中的事件对象)
+    - [1.3.3. 跨浏览器的事件对象](#133-跨浏览器的事件对象)
   - [1.4. 事件类型](#14-事件类型)
     - [1.4.1. UI 事件](#141-ui-事件)
       - [1.4.1.1. load 事件](#1411-load-事件)
@@ -60,7 +63,7 @@ father/son/sun.onclick = function (event) {
 
 // onclick : 默认就是 第三个参数为 false:
  father.addEventListener('click',function(){
-            alert('father');
+    alert('father');
   },false);
 ```
 
@@ -163,6 +166,8 @@ DOM2 级添加的事件处理程序也是在其依附的元素的作用域中运
 
 ## 1.3. 事件对象
 
+### 1.3.1. DOM 中的事件对象
+
 在触发 DOM 上的某个事件时，会产生一个事件对象 event，这个对象中包含着所有与事件有关的信息。包括导致事件的元素、事件的类型以及与特定事件相关的信息。鼠标事件触发时，事件对象中会包含鼠标的位置信息。键盘事件触发时，事件对象中会包含按下的键相关的信息。
 
 现代浏览器获取 :
@@ -191,6 +196,67 @@ btn.onclick = function(event){
 //只要用到了事件对象，就要记得处理浏览器兼容性
 event = event || window.event;
 }
+```
+
+event 对象包含与创建它的特定事件有关的属性和方法。出发的事件类型不一样，可用的属性和方法也不一样。不过，所有事件都会有下表列出的成员。
+| 属性/方法 | 类型 | 读/写 | 说明 |
+| -------------------------- | -------- | ----- | ---------------------------------------------------------------------- |
+| bubbles | Boolean | 只读 | 表明事件是否冒泡 |
+| cancelable | Boolean | 只读 | 表明是否可以取消事件的默认行为 |
+| currentTarget | Element | 只读 | 表明事件处理程序当前正在处理的元素 |
+| defaultPervented | Boolean | 只读 | 为 true 表示已经调用了 preventDefault()方法 |
+| detail | Integer | 只读 | 表示与事件相关的细节信息 |
+| eventPhase | Integer | 只读 | 调用事件处理程序的阶段：1 表示捕获阶段，2 表示目标阶段，3 表示冒泡阶段 |
+| preventDefault() | Function | 只读 | 取消事件的默认行为 |
+| stopImmediatePropagation() | Function | 只读 | 取消事件的进一步捕获或冒泡，同时阻止任何事件处理程序被调用 |
+| stopPropagation() | Function | 只读 | 阻止事件进一步捕获或冒泡 |
+| target | Element | 只读 | 目标元素 |
+| type | String | 只读 | 被触发的事件类型 |
+
+---
+
+### 1.3.2. IE 中的事件对象
+
+| 属性/方法    | 类型    | 读/写 | 说明                                                                |
+| ------------ | ------- | ----- | ------------------------------------------------------------------- |
+| cancelBubble | Boolean | 读写  | 默认为 false。用于取消事件冒泡，与 DOM 中的 stopPropagation（）相同 |
+| returnValue  | Boolean | 读写  | 默认为 true，用于取消默认行为，与 DOM 中的 preventDeafault（）相同  |
+| srcElement   | Element | 只读  | 事件目标元素，与 DOM 中的 target 相同                               |
+| type         | String  | 只读  | 被触发的事件类型                                                    |
+
+### 1.3.3. 跨浏览器的事件对象
+
+```JavaScript
+var eventUtil = {
+    addHandler: function(ele, type, handler) {
+        // 代码在上文，
+    },
+    getEvent: function(event) {
+        return event || window.event;
+    },
+    getTarget: function(event) {
+        // 该语句可以不用，关键是传入的event是否已经被处理
+        // var event = event || window.event;
+        return event.target || event.srcElement;
+    },
+    preventDefault: function(event) {
+        if(event.preventDefault) {
+            event.preventDefault();
+        } else {
+            event.returnValue = false;
+        }
+    },
+    removeHandler: function(ele, type, handler) {
+        // 省略代码
+    },
+    stopPropagation: function(event) {
+        if(event.stopPropagation) {
+            event.stopPropagation(();
+        } else {
+            event.cancelBubble = true;
+        }
+    },
+};
 ```
 
 ## 1.4. 事件类型
@@ -352,9 +418,56 @@ textInput 事件考虑的是字符，因为该事件的 Event 对象只有一个
 
 #### 1.4.6.1. 键码
 
-当触发 keydown 和 keyup 事件时，其 event 对象有个叫做 keyCode 的属性，其包含了用户所按下的按键的字符键码。例如：字符“q”对应的键码为 81，字符"w"对应的键码是 87。
+当触发 keydown 和 keyup 事件时，其 event 对象有个叫做 keyCode 的属性，其包含了用户所按下的按键的字符键码。
 
 注：keyCode 属性不会区分字符大小写状态的，例如：不管是大写 A 还是小写 a 均返回 65。
+
+**字母和数字键的键码值(keyCode)**：
+| 按键 | 键码 | 按键 | 键码 | 按键 | 键码 | 按键 | 键码 |
+| ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+| A | 65 | J | 74 | S | 83 | 1 | 49 |
+| B | 66 | K | 75 | T | 84 | 2 | 50 |
+| C | 67 | L | 76 | U | 85 | 3 | 51 |
+| D | 68 | M | 77 | V | 86 | 4 | 52 |
+| E | 69 | N | 78 | W | 87 | 5 | 53 |
+| F | 70 | O | 79 | X | 88 | 6 | 54 |
+| G | 71 | P | 80 | Y | 89 | 7 | 55 |
+| H | 72 | Q | 81 | Z | 90 | 8 | 56 |
+| I | 73 | R | 82 | 0 | 48 | 9 | 57 |
+
+**数字键盘上的键的键码值(keyCode)**：
+按键 | 键码 | 按键 | 键码
+---|---|---|---
+0 |96| 8| 104
+1 |97 |9| 105
+2| 98| \* |106
+3| 99 |+| 107
+4| 100 |Enter| 108
+5 |101| - |109
+6 |102| .| 110
+7| 103| /| 111
+
+**功能键键码值(keyCode)**：
+按键| 键码 |按键| 键码
+---|---|---|---
+F1 |112 |F7 |118
+F2 |113 |F8 |119
+F3 |114 |F9 |120
+F4 |115| F10| 121
+F5 |116 |F11 |122
+F6 |117| F12 |123
+
+**控制键键码值(keyCode)**：
+按键|键码|按键|键码|按键|键码|按键|键码
+---|---|---|---|---|---|---|---
+BackSpace|8|Esc|27|Right Arrow|39|-\_|189
+Tab|9|Spacebar|32|Down Arrow|40|.>|190
+Clear|12|Page Up|33|Insert|45|/?|191
+Enter|13|Page Down|34|Delete|46|`~|192
+Shift|16|End|35|Num Lock|144|[{|219
+Control|17|Home|36|;:|186|/\||220
+Alt|18|Left Arrow|37|=+|187|]}|221
+Cape Lock |20
 
 ### 1.4.7. 变动事件
 
