--- a/2. CSS/05. CSS浮动.md
+++ b/2. CSS/05. CSS浮动.md
@@ -40,16 +40,19 @@
 1. 强行给父盒子添加高度 （不推荐，不利于后期维护）
 2. 创建一个新的块级盒子放在浮动元素的最后面，给这个盒子添加一个 css 属性：clear:both;（不推荐，会产生一个多余的盒子）
 3. 伪元素清除浮动 （推荐，书写一个公共类就可以使用）
+
+   ```css
    .clearfix::after {
-   /_ 伪元素必不可少的一句话 这句话没有 伪元素不生效 _/
+   <!--伪元素必不可少的一句话 这句话没有 伪元素不生效 -->
    content: '';
-   /_ 将伪元素转换成块级元素 因为伪元素默认是行内元素 而清除浮动必须是块级元素 _/
+   <!-- 将伪元素转换成块级元素因为伪元素默认是行内元素 而清除浮动必须是块级元素 -->
    display: block;
-   /_ 清除浮动的核心语句 _/
+   <!-- 清除浮动的核心语句 -->
    clear: both;
-   /_ 为了更高的容错率 添加上这两句话 _/
+   <!-- 为了更高的容错率 添加上这两句话 -->
    height: 0;
    visibility: hidden;
    }
+   ```
 
 4. 给父元素添加 overflow:hidden; (在某些特定场景下使用不了)
