--- a/3. JavaScript基础/事件.md
+++ b/3. JavaScript基础/事件.md
@@ -49,7 +49,7 @@
 
 > IE 的事件流叫做**事件冒泡**（event bubbling），即事件开始时由文档中嵌套层次最深的那个节点触发，然后逐级向上传播到其父元素依次被触发。
 
-![bubble](images/01-冒泡.png)
+![bubble](../images/01-冒泡.png)
 
 **拓展** : 阻止事件冒泡：`event.stopPropagation()`
 
@@ -71,7 +71,7 @@ father/son/sun.onclick = function (event) {
 
 > ​ 　　 Netscape Communicator 团队提出的另一种事件流叫做**事件捕获**（event capturing），事件的处理将从 DOM 层次的根开始，而不是从触发事件的目标元素开始，事件被从目标元素的所有祖先元素依次往下传递。
 
-![bubble](images/02-捕获.png)
+![bubble](../images/02-捕获.png)
 
 ```JavaScript
 //当addEventListener第三个参数为true时，表示事件捕获
@@ -93,7 +93,7 @@ arr[i].addEventListener(
 2. 事件的目标阶段（触发自己的事件）
 3. 事件的冒泡阶段
 
-![事件的三个阶段](images/03-事件流三个阶段.png)
+![事件的三个阶段](../images/03-事件流三个阶段.png)
 
 - 若捕获事件和冒泡事件都存在，首先发生的是捕获阶段，然后是目标阶段，最后才是冒泡阶段。
 - `addEventListener()` 第三个参数为是否捕获：
